Bug 1581506 - Hide the extra text for the Firefox Accounts button if the text wrapping stretches across more than three lines. r=sfoster
I used three lines instead of two because in my testing the space above and below the Sign In button allowed for some extra text to be shown without strecthing out of the container. I would prefer to err on the side of showing the full text instead of just the elided text since we cannot add a tooltip (title attribute) without changing the FTL key.

Differential Revision: https://phabricator.services.mozilla.com/D49014

UltraBlame original commit: be74a47ce6693bd0f72733265a3b185a0e470a84

--- a/browser/components/aboutlogins/content/components/fxaccounts-button.css
+++ b/browser/components/aboutlogins/content/components/fxaccounts-button.css
@@ -9,6 +9,13 @@
 }
 
 .fxaccounts-extra-text {
+  
+
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+
   color: var(--in-content-deemphasized-text);
   text-align: end;
 }
